Fix align Groups label in grid
Fixes axelor-web#89

--- a/src/grid/grid.module.scss
+++ b/src/grid/grid.module.scss
@@ -309,5 +309,5 @@
 
 .groupPlaceholder {
   opacity: 0.5;
-  padding: 0 1.25rem;
+  padding: 0 0.25rem;
 }
